compiler/testData/diagnostics/testsWithStdLib/tieredFailures/fail/isBoxButLimitedToKlib.kt
// RUN_PIPELINE_TILL: KLIB
// FIR_IDENTICAL
// ISSUE: KT-67281
// WITH_STDLIB
// TARGET_PLATFORM: Common

fun commonFunction() {}
